runtime bytecode transformation